log
Fri Mar 26 19:16:16 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   List->
       ^~
list.c:34:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:21:14 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘list’ [-Werror=unused-variable]
   List* list = malloc(sizeof(List));
         ^~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:45:28 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:37:13: error: expected expression before ‘void’
      return void;
             ^~~~
list.c: In function ‘prevList’:
list.c:53:6: error: expected ‘(’ before ‘list’
   if list == front
      ^~~~
list.c:53:6: error: statement with no effect [-Werror=unused-value]
list.c: In function ‘createList’:
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function ‘prevList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:46:08 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:37:13: error: expected expression before ‘List’
      return List;
             ^~~~
list.c: In function ‘prevList’:
list.c:53:6: error: expected ‘(’ before ‘list’
   if list == front
      ^~~~
list.c:53:6: error: statement with no effect [-Werror=unused-value]
list.c: In function ‘createList’:
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function ‘prevList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:48:19 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘prevList’:
list.c:53:6: error: expected ‘(’ before ‘list’
   if list == front
      ^~~~
list.c:53:6: error: statement with no effect [-Werror=unused-value]
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:48:27 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘prevList’:
list.c:53:6: error: expected ‘(’ before ‘list’
   if list == front
      ^~~~
list.c:53:6: error: statement with no effect [-Werror=unused-value]
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:51:06 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘prevList’:
list.c:53:6: error: expected ‘(’ before ‘list’
   if list == front
      ^~~~
list.c:53:6: error: statement with no effect [-Werror=unused-value]
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:51:12 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:37:13: error: expected expression before ‘List’
      return List;
             ^~~~
list.c: In function ‘prevList’:
list.c:53:6: error: expected ‘(’ before ‘list’
   if list == front
      ^~~~
list.c:53:6: error: statement with no effect [-Werror=unused-value]
list.c: In function ‘createList’:
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function ‘prevList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:51:23 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘prevList’:
list.c:53:6: error: expected ‘(’ before ‘list’
   if list == front
      ^~~~
list.c:53:6: error: statement with no effect [-Werror=unused-value]
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:52:13 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘prevList’:
list.c:53:6: error: expected ‘(’ before ‘list’
   if list == front
      ^~~~
list.c:53:6: error: statement with no effect [-Werror=unused-value]
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:52:36 UTC 2021: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2a3bfc2
Thu Apr  1 01:20:21 UTC 2021: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|5
total_score: 15/70
cead54d
Thu Apr  1 01:28:39 UTC 2021: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
8f60fbe
Thu Apr  1 01:29:21 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
63d439d
Thu Apr  1 01:34:24 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e1f1852
Thu Apr  1 01:37:38 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
b7a3fba
Thu Apr  1 01:40:14 UTC 2021: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
8afa25f
Thu Apr  1 01:43:35 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
fae89fe
Thu Apr  1 01:45:47 UTC 2021: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  5|4
total_score: 25/70
34aa92b
Thu Apr  1 01:46:54 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
3b5b8d5
Thu Apr  1 01:51:49 UTC 2021: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  6|4
total_score: 25/70
9cdd0d4
Thu Apr  1 01:53:54 UTC 2021: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  9|3
total_score: 35/70
ba5432e
Thu Apr  1 02:21:28 UTC 2021: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
91fea20
Thu Apr  1 02:23:12 UTC 2021: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
8aaa5aa
Thu Apr  1 02:26:04 UTC 2021: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
9a158d5
Thu Apr  1 02:26:51 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
0f28a93
Thu Apr  1 02:27:37 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
9d4b618
Thu Apr  1 02:28:06 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
4bc7baa
Thu Apr  1 02:35:56 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
99e82b3
Thu Apr  1 02:36:17 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c5f6dde
Thu Apr  1 02:43:12 UTC 2021: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  10|2
total_score: 45/70
85447e2
Thu Apr  1 02:44:12 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
96445a8
Thu Apr  1 02:45:09 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
ce099d9
Thu Apr  1 02:45:51 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d42bb0f
Thu Apr  1 02:46:52 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
33bf70b
Thu Apr  1 02:47:21 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
abb0ace
Thu Apr  1 02:50:37 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
ea221ff
Thu Apr  1 02:51:34 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
852dc82
Thu Apr  1 02:52:29 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
6acbf76
Thu Apr  1 02:52:56 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
12cdb39
Thu Apr  1 02:54:06 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fe10c26
Thu Apr  1 02:54:18 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
da4dc12
Thu Apr  1 02:54:47 UTC 2021: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  10|2
total_score: 45/70
a5d39ce
Thu Apr  1 02:55:02 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
937d049
Thu Apr  1 02:56:18 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
db01773
Thu Apr  1 02:56:46 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
635f272
